# Husky_scripts

./: .gitignore  README.md
bop_format_scripts/: README.md  buffer_core_demo.py  buffer_core_demo.py.save  buffer_core_demo_thijs.py  camera_info_to_json.py  camera_scene_00006.txt  do_tf_pose_demo.py
bop_format_scripts/husky_bop/: camera.json  test_targets_bop19.json
bop_ros_conversion/: CMakeLists.txt  README.md  package.xml
bop_ros_conversion/launch/: odom_to_tf2.launch  odom_to_tf2_cam_info.launch  odom_to_tf2_minor_test.launch  odom_to_tf2_nosync.launch  odom_to_tf2_to_ctr.launch  record_synced_bags.launch  record_zed_depth.launch  tf2_calib.launch  tf2_calib.launch.save
bop_ros_conversion/rviz/: tf_left_rec_config.rviz
bop_ros_conversion/src/: __init__.py
bop_ros_conversion/src/scripts/: __init__.py  bag_to_caminfo_test.py  bag_to_csv_single.py  bag_to_csv_thijs.py  bag_to_image_node.py  bashbatch_gt_json_file_checks.sh  bashbatch_odom_to_tf2.sh  bashbatch_record_synced_bags.sh  bashbatch_vis_gt_video.sh  bashnode.sh  box_mk_to_box_ctr_broadcaster.py  broadcast_odom_to_tf2.py  get_first_timestamp.py  import_test.py  inspect_json.py  load_scene_gt_introspec.py  odom_to_json_listener.py  odom_to_json_listener_2.py  odom_to_json_listener_3.py  odom_to_json_listener_4.py  odom_to_json_listener_nosync.py  odom_to_static_broadcaster.py  odom_to_tf2_broadcaster.py  odom_to_tf2_to_ctr_broadcaster.py  pnp.py  quat_to_euler.py  rewrite_header_node.py  rewrite_rosmsg_header_timestamps.py  rewrite_rosmsg_header_timestamps_all_topics.py  rewrite_rosmsg_header_timestamps_calib.py  rewrite_rosmsg_header_timestamps_nosync.py  rewrite_rosmsg_tf_frame_ids_and_seq.py  rewrite_rostopic_names.py  robot_to_zed_broadcaster.py  robot_to_zed_broadcaster.py.save  rosbag_check.py  rosbag_crop.py  sync_husky_and_optitrack_topics.py  tf2_listener.py  tf2_lookup.py  (+5 more)
bop_ros_conversion/src/scripts/utils/: __init__.py  quat_to_euler.py
data_visualization/: README.md  bag_to_csv_thijs.py  bag_to_csv_thijs_test.py  bag_to_images.py  bag_to_images_loop  images_intrinsics_to_csv.py  read_csv_plotting.py  read_csv_plotting_images.py  to_csv.py
data_visualization/plot scripts/: method_vs_add.py  plot_csv_epoch_loss_plot.py  plot_results.py  plot_results_loop.py  plot_results_loop_multiple_rows_one_image.py  plot_results_single_col.py  plot_results_single_col_loop.py  speed_accurary_line_graph.py
datasaver/: CMakeLists.txt  README.md  package.xml  setup.py
datasaver/launch/: data_collection.launch  data_collection_husky.launch  topic_tools_throttle_example.launch
datasaver/src/: datasaver.py  get_pose_in_Gazebo.py  husky_visualization.py  reader.py  saver.py
pybop/: requirements.txt  setup.py
pybop/pybop_lib/: bag_to_camerainfo.py  bag_to_images.py  batch_rm_rgb_jsons.sh  batch_rm_rgb_right.sh  bop_gt_utils.py  cc_depth_ims  cc_depth_ims_2  cc_depth_ims_3  config.py  cp_scene_gt_batch  cp_scene_gt_batch.sh  dataset_params.py  debug_tools.py  filter_cam_info.py  gen_hybrid_depth.py  get_first_timestamp.py  import_test.py  inout.py  load_scene_gt_introspec.py  load_scene_gt_introspec_husky.py  manipulate_depth.py  metric.py  quat_to_euler.py  stamp_utils.py  transform_tools.py  vis_gt_pose.py
pybop/pybop_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybop/pybop_lib/tools_for_bop/: GDR_Net_Augmentation.py  bop_gt_utils.py  csv_ops.py  merge_csv.py  pose_to_bbox.py  test_cvbridge.py
pybop/scripts/: roslaunch_gt_json.py  roslaunch_odom_consecutive.py  roslaunch_odom_consecutive_v2.py  roslaunch_syncrecord_consecutive_v2.py
rosbag_record/: .topic_tools_throttle_example.launch.swp  README.md  topic_tools_throttle_example.launch
rosbag_record_launch_files/: README.md  rosbag_record_vision_ROS_answers.launch  rosbag_record_vision_backup.launch  rosbag_record_vision_simple.launch  topic_tools_throttle_example.launch  topic_tools_throttle_example.launch.save  topic_tools_throttle_example.launch.save.1  topic_tools_transform_example.launch
trial_package/: CMakeLists.txt  package.xml
trial_package/launch/: record_synced_bags.launch
trial_package/scripts/: camera_pose_sync.py
trial_package/src/: .ros_rewrite_header_timestamps.py.swp  20220622_sequence_6_pose.txt  20220622_sequence_6_twist.txt  ros_list_msgs.py  ros_rewrite_header_timestamps.py  rosbag_crop.py
trial_package/src/scripts/: camera_pose_sync.py  robot_object_sync.py  ros_list_msgs.py  ros_rewrite_header_timestamps.py  ros_rewrite_header_timestamps_debug.py  rosbag_crop.py  rosbag_crop_to_first_100.py
